<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/yijianfankui"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gengduo_modifybiaoti12"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/emailtool_text1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/more_back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/shezhi_title"
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:layout_marginRight="95dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:src="@drawable/yijianfankui"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundshapepress"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/advice_tianjia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1"
            android:hint="@string/advice"
            android:textColor="#000000"
            android:background="@drawable/touming"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advicecount"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/touming"
        android:gravity="center_vertical|right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/advicecount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/100"
            android:textColor="#FF8C00" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lianxifankui"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/advicee_mail_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/advicee_mail"
            android:textColor="#666666"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/advicee_mail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/advicee_mail_inf"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submitmain_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundbutton"
        android:text="提交"
        android:textColor="#ffffff"
        android:textSize="20sp" >
    </Button>

</LinearLayout>