<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.community.shetuanbao.Login.RegisterActivity">
    <ScrollView
        android:id="@+id/enrollmainscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:id="@+id/enrollmainl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/enrolltool"
                android:layout_width="match_parent"
                android:layout_height="50.0dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/gengduo_modifybiaoti12">
                <TextView
                    android:id="@+id/enrolltool_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.6"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="#ffffff"
                    android:text="返回"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/enrolltool_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:text="注册"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/enrollmain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/total"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal"
                    android:layout_weight="5">
                    <LinearLayout
                        android:id="@+id/enrollmain_username"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/roundshape"
                        >
                        <TextView
                            android:id="@+id/enrollmain_username_text"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:padding="10dp"
                            android:text="@string/more_username"
                            android:textColor="#666666"
                            android:textSize="14sp"
                            />

                        <EditText
                            android:id="@+id/enrollmain_username_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:background="@mipmap/comeing"
                            android:hint="@string/more_pleaseputusername"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="#666666"
                            android:textSize="14sp" >

                        </EditText>
                    </LinearLayout>
                    <Spinner
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:spinnerMode="dialog"
                        android:layout_weight="1"
                        android:layout_marginLeft="6dp"


                        />
                </LinearLayout>





                <LinearLayout
                    android:id="@+id/enrollmain_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_password_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="@string/more_password"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_password_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textPassword"
                        android:hint="请输入密码"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/enrollmain_password_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_password_2_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="@string/more_password1"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_password_2_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textPassword"
                        android:hint="请再次输入密码"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/enrollmain_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_name_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="@string/more_name"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的昵称"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/enrollmain_xueyuan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_xueyuan_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="学院："
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_xueyuan_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的学院"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/enrollmain_major"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_major_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="专业："
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_major_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的专业"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/enrollmain_pen"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_pen_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="个性签名："
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_pen_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的签名"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/enrollmain_e_mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_e_mail_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="@string/more_e_mail"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_e_mail_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的邮箱"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/enrollmain_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundshape"
                    >
                    <TextView
                        android:id="@+id/enrollmain_phone_t"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:padding="10dp"
                        android:text="@string/more_phone"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        />
                    <EditText
                        android:id="@+id/enrollmain_phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="请输入您的联系方式"
                        android:padding="10dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:background="@mipmap/comeing"
                        android:singleLine="true"
                        />
                </LinearLayout>
                <Button
                    android:text="完成注册"
                    android:textSize="20sp"
                    android:id="@+id/enrollmain_Button_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/buttonloginclock">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
